# BioPep

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  csv2fasta.py  dock_scraping.ipynb  dock_scraping.py  docker-compose.yml  environment.yml  main.py  make.sh  pyproject.toml  search.py
Alpha/: Biopep.py  Modelling.py  Submit.py
input/: query.fasta
output/: output.py
pdb/: make.py
